# orchid

./: Cargo.toml  README.md  index.md
.github/workflows/: build.yml  codecov.yml  rust.yml  test.yml
examples/counter/client/: counter_client.rs
examples/counter/server/: counter_server.rs
proto/: Cargo.toml  build.rs
proto/counter/: counter.proto
proto/raft/: raft.proto
proto/src/proto/: mod.rs
src/: lib.rs  logger.rs
src/log/: log4rs.toml  logger.rs
src/node/: mod.rs  raft_node.rs  raft_option.rs
