[package]
name = "orchid-proto"
version = "0.1.0"
authors = ["Praying <snowfallvilla@163.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
build="build.rs"

[build-dependencies]
tonic-build = {version="0.3.1" , features = ["prost"]}

[dependencies]
tonic = { version = "0.3.1"}
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"

[lib]
name="orchid_proto"
path="src/lib.rs"
